--- a/palmx.vcxproj
+++ b/palmx.vcxproj
@@ -24,20 +24,21 @@
     <ClCompile Include="src\engine\Input.cpp" />
     <ClCompile Include="src\engine\Entity.cpp" />
     <ClCompile Include="src\engine\Scene.cpp" />
-    <ClCompile Include="src\engine\InputModule.cpp" />
+    <ClCompile Include="src\engine\InputSystem.cpp" />
     <ClCompile Include="src\engine\Engine.cpp" />
-    <ClCompile Include="src\gui\GuiModule.cpp" />
+    <ClCompile Include="src\engine\SceneManager.cpp" />
+    <ClCompile Include="src\gui\GuiSystem.cpp" />
     <ClCompile Include="src\renderer\Mesh.cpp" />
     <ClCompile Include="src\renderer\Model.cpp" />
-    <ClCompile Include="src\renderer\RenderModule.cpp" />
+    <ClCompile Include="src\renderer\RenderSystem.cpp" />
     <ClCompile Include="src\renderer\Shader.cpp" />
-    <ClCompile Include="src\engine\SceneModule.cpp" />
     <ClCompile Include="src\engine\Logger.cpp" />
     <ClCompile Include="src\engine\ResourceManager.cpp" />
     <ClCompile Include="src\engine\Transform.cpp" />
     <ClCompile Include="external\glad\glad.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\engine\SceneManager.h" />
     <ClInclude Include="src\renderer\Renderer.h" />
     <ClInclude Include="src\engine\ScriptBehavior.h" />
     <ClInclude Include="src\engine\ScriptHook.h" />
@@ -45,16 +46,15 @@
     <ClInclude Include="src\renderer\Camera.h" />
     <ClInclude Include="src\engine\Entity.h" />
     <ClInclude Include="src\engine\Scene.h" />
-    <ClInclude Include="src\engine\InputModule.h" />
+    <ClInclude Include="src\engine\InputSystem.h" />
     <ClInclude Include="src\engine\Engine.h" />
     <ClInclude Include="src\engine\Singleton.h" />
     <ClInclude Include="src\renderer\Mesh.h" />
     <ClInclude Include="src\renderer\Model.h" />
-    <ClInclude Include="src\renderer\RenderModule.h" />
+    <ClInclude Include="src\renderer\RenderSystem.h" />
     <ClInclude Include="src\renderer\Shader.h" />
     <ClInclude Include="src\engine\ResourceManager.h" />
     <ClInclude Include="src\engine\Logger.h" />
-    <ClInclude Include="src\engine\SceneModule.h" />
     <ClInclude Include="src\engine\SceneView.h" />
     <ClInclude Include="include\stb\stb_image.h" />
     <ClInclude Include="src\engine\Transform.h" />
