--- a/palmx.vcxproj
+++ b/palmx.vcxproj
@@ -19,53 +19,53 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\demo\scp_173.cpp" />
+    <ClCompile Include="src\demo\demo_enemy.cpp" />
     <ClCompile Include="src\physics\algo.cpp" />
-    <ClCompile Include="src\physics\PhysicsSystem.cpp" />
-    <ClCompile Include="src\demo\Main.cpp" />
-    <ClCompile Include="src\demo\DemoController.cpp" />
-    <ClCompile Include="src\engine\Input.cpp" />
-    <ClCompile Include="src\engine\Entity.cpp" />
-    <ClCompile Include="src\engine\Scene.cpp" />
-    <ClCompile Include="src\engine\InputSystem.cpp" />
-    <ClCompile Include="src\engine\Engine.cpp" />
-    <ClCompile Include="src\engine\SceneManager.cpp" />
-    <ClCompile Include="src\gui\GuiSystem.cpp" />
-    <ClCompile Include="src\renderer\Mesh.cpp" />
-    <ClCompile Include="src\renderer\Model.cpp" />
-    <ClCompile Include="src\renderer\RenderSystem.cpp" />
-    <ClCompile Include="src\renderer\Shader.cpp" />
-    <ClCompile Include="src\engine\Logger.cpp" />
-    <ClCompile Include="src\engine\ResourceManager.cpp" />
-    <ClCompile Include="src\engine\Transform.cpp" />
+    <ClCompile Include="src\physics\physics_system.cpp" />
+    <ClCompile Include="src\demo\main.cpp" />
+    <ClCompile Include="src\demo\demo_controller.cpp" />
+    <ClCompile Include="src\engine\input.cpp" />
+    <ClCompile Include="src\engine\entity.cpp" />
+    <ClCompile Include="src\engine\scene.cpp" />
+    <ClCompile Include="src\engine\input_system.cpp" />
+    <ClCompile Include="src\engine\engine.cpp" />
+    <ClCompile Include="src\engine\scene_manager.cpp" />
+    <ClCompile Include="src\gui\gui_system.cpp" />
+    <ClCompile Include="src\renderer\mesh.cpp" />
+    <ClCompile Include="src\renderer\model.cpp" />
+    <ClCompile Include="src\renderer\render_system.cpp" />
+    <ClCompile Include="src\renderer\shader.cpp" />
+    <ClCompile Include="src\engine\logger.cpp" />
+    <ClCompile Include="src\engine\resource_loader.cpp" />
+    <ClCompile Include="src\engine\transform.cpp" />
     <ClCompile Include="external\glad\glad.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\demo\scp_173.h" />
+    <ClInclude Include="src\demo\demo_enemy.h" />
     <ClInclude Include="src\physics\algo.h" />
-    <ClInclude Include="src\physics\Collider.h" />
-    <ClInclude Include="src\physics\PhysicsSystem.h" />
-    <ClInclude Include="src\engine\SceneManager.h" />
-    <ClInclude Include="src\physics\Rigidbody.h" />
-    <ClInclude Include="src\renderer\Renderer.h" />
-    <ClInclude Include="src\engine\ScriptBehavior.h" />
-    <ClInclude Include="src\engine\ScriptHook.h" />
-    <ClInclude Include="src\engine\Input.h" />
-    <ClInclude Include="src\renderer\Camera.h" />
-    <ClInclude Include="src\engine\Entity.h" />
-    <ClInclude Include="src\engine\Scene.h" />
-    <ClInclude Include="src\engine\InputSystem.h" />
-    <ClInclude Include="src\engine\Engine.h" />
-    <ClInclude Include="src\engine\Singleton.h" />
-    <ClInclude Include="src\renderer\Mesh.h" />
-    <ClInclude Include="src\renderer\Model.h" />
-    <ClInclude Include="src\renderer\RenderSystem.h" />
-    <ClInclude Include="src\renderer\Shader.h" />
-    <ClInclude Include="src\engine\ResourceManager.h" />
-    <ClInclude Include="src\engine\Logger.h" />
-    <ClInclude Include="src\engine\SceneView.h" />
+    <ClInclude Include="src\physics\collider.h" />
+    <ClInclude Include="src\physics\physics_system.h" />
+    <ClInclude Include="src\engine\scene_manager.h" />
+    <ClInclude Include="src\physics\rigidbody.h" />
+    <ClInclude Include="src\renderer\renderer.h" />
+    <ClInclude Include="src\engine\script_behavior.h" />
+    <ClInclude Include="src\engine\script_hook.h" />
+    <ClInclude Include="src\engine\input.h" />
+    <ClInclude Include="src\renderer\camera.h" />
+    <ClInclude Include="src\engine\entity.h" />
+    <ClInclude Include="src\engine\scene.h" />
+    <ClInclude Include="src\engine\input_system.h" />
+    <ClInclude Include="src\engine\engine.h" />
+    <ClInclude Include="src\engine\singleton.h" />
+    <ClInclude Include="src\renderer\mesh.h" />
+    <ClInclude Include="src\renderer\model.h" />
+    <ClInclude Include="src\renderer\render_system.h" />
+    <ClInclude Include="src\renderer\shader.h" />
+    <ClInclude Include="src\engine\resource_loader.h" />
+    <ClInclude Include="src\engine\logger.h" />
+    <ClInclude Include="src\engine\scene_view.h" />
     <ClInclude Include="include\stb\stb_image.h" />
-    <ClInclude Include="src\engine\Transform.h" />
+    <ClInclude Include="src\engine\transform.h" />
     <ClInclude Include="game\PlayerController.h" />
   </ItemGroup>
   <ItemGroup>
