feat: add name to config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -88,7 +88,8 @@
         "set": "cpp",
         "source_location": "cpp",
         "stack": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "*.rh": "cpp"
     },
     "C_Cpp.vcFormat.space.pointerReferenceAlignment": "left",
     "C_Cpp.errorSquiggles": "enabled",
