--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,9 @@
 cmake_minimum_required(VERSION 3.22 FATAL_ERROR)
 
 project(palmx)
-
 set (CMAKE_CXX_STANDARD 20)
 
-option(PALMX_BUILD_EXAMPLES "Build the palmx example projects" ON)
+option(PALMX_BUILD_EXAMPLES "Build example projects." ON)
 
 set(PALMX_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
