--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 3.15 FATAL_ERROR)
-
 project(palmx)
 
-option(PALMX_BUILD_EXAMPLES "Build example projects." ON)
-
+set(CMAKE_CXX_STANDARD 20)
 set(PALMX_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
+
+option(PALMX_BUILD_EXAMPLES "Build example projects." ON)
 
 add_subdirectory(src)
 add_subdirectory(external)
